Fix compact form button alignment @ sm

--- a/src/assets/scss/components/_compact-form.scss
+++ b/src/assets/scss/components/_compact-form.scss
@@ -60,12 +60,13 @@
 	&__action {
 		align-items: center;
 		display: flex; // stetch height of button inside to maximum
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: center;
 
 		@include mq(xs) {
 			border-bottom-left-radius: 0;
 			border-top-left-radius: 0;
+			flex-direction: column;
 		}
 	}
 
